<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_10sdp"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        >


        <ImageView
            android:id="@+id/imgCancel"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:src="@drawable/ic_baseline_cancel_24"
            app:tint="@color/black"
            android:layout_gravity="end"
            />
        <TextView
            android:id="@+id/txtIncludeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add number in include list"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:fontFamily="@font/worksans"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppTheme.TextInputLayoutList"
            android:hint="@string/name"
            app:boxStrokeWidth="2dp"
            android:textColorHint="@color/hint_text_color"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robot_medium"


                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppTheme.TextInputLayoutList"
            android:hint="@string/phone_number"
            app:boxStrokeWidth="2dp"
            android:autofillHints="phone"
            android:textColorHint="@color/hint_text_color"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/robot_medium"
                android:inputType="phone"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:paddingStart="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:backgroundTint="@color/color_accepted"
            android:fontFamily="sans-serif-medium"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            app:cornerRadius="@dimen/_20sdp" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>