<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_130sdp"
        android:orientation="vertical"
        android:background="@drawable/ic_vector"
        >

        <TextView
            android:id="@+id/txtHeaderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="Login"
            android:textSize="@dimen/_25sdp"
            android:layout_marginEnd="10dp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/white"
            android:gravity="center_vertical"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please login to use app.."
            android:textSize="@dimen/_13sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/white"
            android:gravity="center_vertical"

            />


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:layout_weight="2"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutEmail"
                style="@style/Widget.AppTheme.TextInputLayoutList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:textColorHint="@color/hint_text_color"
                app:boxStrokeWidth="2dp"
                app:placeholderText="example@gmail.com">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robot_medium"


                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutPassword"
                style="@style/Widget.AppTheme.TextInputLayoutList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:autofillHints="password"
                android:hint="Password"
                android:textColorHint="@color/hint_text_color"
                app:boxStrokeWidth="2dp"
                app:passwordToggleEnabled="true"
                app:placeholderText="Strong password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robot_medium"
                    android:inputType="textPassword"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="horizontal">


                <CheckBox
                    android:id="@+id/checkBoxRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/robot_medium"
                    android:text="@string/remember_me" />
            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:backgroundTint="@color/main_color"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                app:cornerRadius="@dimen/_20sdp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>